--- a/shopping/package.json
+++ b/shopping/package.json
@@ -13,9 +13,10 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
-    "react": "^19.1.0",
+    "react": "^18.1.0",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.1",
     "redux": "^5.0.1",
